--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,50 +1,17 @@
-name: CI/CD React Application
+version: 1.1
 
-on:
-  push:
-    branches:
-      - main
+steps:
+  - checkout:
+      branch: main
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+  - install:
+      commands:
+        - npm install
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  - build:
+      commands:
+        - npm run build
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build React application
-        run: npm run build
-
-      - name: Archive build artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifact
-          path: build/
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: build-artifact
-          path: build/
-
-      - name: Deploy to production
-        uses: recursiveeducation/deploy-react-to-production@main
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          domain: recursiveeducation.com
-          shared-ip-address: 23.106.53.137
-          home-directory: /home/recursiveeducati
+  - deploy:
+      commands:
+        - cp -r build/* public_html
