--- a/.github/workflows/cpanel.yml
+++ b/.github/workflows/cpanel.yml
@@ -1,17 +1,32 @@
+on:
+    push:
+        branches:
+            - main
+name: 🚀 Deploy website on push
 
-  deployment:
-    tasks:
-      - export DEPLOYPATH=/home/example/public_html/
-      - /bin/cp -R images $DEPLOYPATH
-  environment:
-    php: 7.4
-    node: 16
-  tasks:
-    - export DEPLOYPATH=/home/example/public_html/
-    - git pull
-    - composer install
-    - npm install
-    - npm run build
-    - cp -r build/* $DEPLOYPATH
-    - nginx -t
-    - sudo systemctl restart nginx
+jobs:
+    web-deploy:
+        name: 🎉 Deploy
+        runs-on: ubuntu-latest
+        steps:
+            - name: 🚚 Get latest code
+              uses: actions/checkout@v3
+
+            - name: Use Node.js 16
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16'
+
+            - name: 🔨 Build Project
+              run: |
+                  npm install
+                  npm run build
+
+            - name: 📂 Sync files
+              uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+              with:
+                  server: ${{ secrets.GIT_CPANEL_REACT_SERVER }}
+                  username: ${{ secrets.GIT_CPANEL_REACT_USER }}
+                  password: ${{ secrets.GIT_CPANEL_REACT_PWD }}
+                  protocol: ${{ secrets.GIT_CPANEL_REACT_PROTOCOL }}
+                  local-dir: ./build/
