--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-player": "^2.13.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-show-more-text": "^1.7.1",
     "react-slick": "^0.30.2",
     "react-syntax-highlighter": "^15.5.0",
     "slick-carousel": "^1.8.1",
