--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.30.2",
     "react-syntax-highlighter": "^15.5.0",
     "slick-carousel": "^1.8.1",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
